--- a/html/Introduction.html
+++ b/html/Introduction.html
@@ -17,13 +17,13 @@
     <link type="text/css" rel="stylesheet" href="../css/footer.css" />
     <link type="text/css" rel="stylesheet" href="../css/Introduction.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
     <div class="headerTop clearfix">
-        <div class="headLogo"></div>
+        <div class="headLogo"> <a href="../index.html"></a></div>
         <div class="headRight"></div>
     </div>
     <div class="headerBottom">
@@ -90,12 +90,27 @@
         <div class="mobile-title-en">馬會知多少</div>
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1"><li class="nav-left-header">公司簡介</li><li><a id="vision-mission-and-values" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/vision-mission-and-values.aspx" target="" class="active">目標、使命與核心價值</a></li><li><a id="management-structure" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/management-structure.aspx" target="">行政架構</a><ul class="nav-level-2"><li><a id="board-of-stewards" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/board-of-stewards.aspx" target="">董事局</a></li><li><a id="board-of-management" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/board-of-management.aspx" target="">管理委員會</a></li><li><a id="ceo" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/ceo.aspx" target="">行政總裁</a></li><li><a id="ceo-blog" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/ceo-blog.aspx" target="">應家柏網誌</a></li></ul></li><li><a id="racing-and-racecourse-entertainment" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/racing-and-racecourse-entertainment.aspx" target="">賽馬及馬場娛樂</a><ul class="nav-level-2"><li><a id="world-class-races" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/world-class-races.aspx" target="">世界級賽事</a></li><li><a id="world-beating-horses" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/world-beating-horses.aspx" target="">香港賽駒揚威海外</a></li><li><a id="our-outstanding-team" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/our-outstanding-team.aspx" target="">星級團隊</a></li><li><a id="racecourse-entertainment" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/racecourse-entertainment.aspx" target="">馬場娛樂</a></li><li><a id="leadership-in-international-racing" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/leadership-in-international-racing.aspx" target="">國際馬壇領導地位</a></li><li><a id="operations-excellence" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/operations-excellence.aspx" target="">卓越營運</a></li><li><a id="training-the-next-generation" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/training-the-next-generation.aspx" target="">培育新一代</a></li><li><a id="uncompromising-integrity" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/uncompromising-integrity.aspx" target="">堅守誠信</a></li></ul></li><li><a id="membership-club" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/membership-club.aspx" target="">會員會所</a></li><li><a id="responsible-sports-wagering-and-mark-six-lottery" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/responsible-sports-wagering-and-mark-six-lottery.aspx" target="">有節制體育博彩及六合彩獎券</a><ul class="nav-level-2"><li><a id="responsible-gambling-policy" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/responsible-gambling-policy.aspx" target="">有節制博彩政策</a></li><li><a id="sports-wagering-and-mark-six-lottery-services" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/sports-wagering-and-mark-six-lottery-services.aspx" target="">有節制體育博彩及六合彩獎券服務</a></li></ul></li><li><a id="corp-charities" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/charities.aspx" target="">慈善事務</a></li><li><a id="hkjc-sports-and-community-development" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/hkjc-sports-and-community-development.aspx" target="">馬會體育及社區發展</a></li><li><a id="awards-and-achievements" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/awards-and-achievements.aspx" target="">獎項及榮譽</a></li></ul></div>
+                <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                    <ul class="nav-level-1">
+                        <li class="nav-left-header">公司簡介</li>
+                        <li><a id="vision-mission-and-values" href="./Introduction.html" target="" class="active">目標、使命與核心價值</a></li>
+                        <li><a id="management-structure" href="./Introduction_a.html" target="">行政架構</a>
+                        </li>
+                        <li><a id="racing-and-racecourse-entertainment" href="./Introduction_b.html" target="">賽馬及馬場娛樂</a>
+                        </li>
+                        <li><a id="membership-club" href="./Introduction_c.html" target="">會員會所</a></li>
+                        <li><a id="responsible-sports-wagering-and-mark-six-lottery" href="./Introduction_d.html" target="">有節制體育博彩及六合彩獎券</a>
+                        </li>
+                        <li><a id="corp-charities" href="./Introduction_e.html" target="">慈善事務</a></li>
+                        <li><a id="hkjc-sports-and-community-development" href="./Introduction_f.html" target="">馬會體育及社區發展</a></li>
+                        <li><a id="awards-and-achievements" href="./Introduction_g.html" target="">獎項及榮譽</a></li>
+                        <li><a id="open-result" href="./Introduction_h.html" target="">模擬賽馬開獎結果</a></li>
+                    </ul>
+                </div>
                 <!--CONTENT-->
                 <div class="col-md-10 col-sm-9">
                     <div class="corporate-header">
                         <h4>目標、使命與核心價值
-
                             <div id="fontSizeContainer">
                                 <div><span>字型</span> <a class="small" href="javascript:changeFontSizeRe(0);"></a><a class="medium active" href="javascript:changeFontSizeRe(1);"></a><a class="large" href="javascript:changeFontSizeRe(2);"></a></div>
                             </div>
@@ -129,8 +144,8 @@
                         <div class="row">
                             <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
                                 <div class="videoBox">
-                                    <img style="cursor:pointer" src="../images/videotbn-vision-and-mission.jpg" alt="" class="videoCover" id="videotbn2" data-link="/special/2015/2015-jc130/cht20151223/special_2015-jc130_cht20151223">
-                                    <iframe style="display: none; margin-top: 0px; height: 420px;" class="videoIframe" src="" scrolling="no" frameborder="0" width="100%" id="viFrame2"></iframe>
+                                    <video id="vidplayer0_html5_api" class="vjs-tech" src="http://streaming.hkjc.edgesuite.net/hdflash//special/2015/2015-jc130/cht20151223/special_2015-jc130_cht20151223_1200kbps.mp4" poster="http://corporate.hkjc.com/corporate/common/images/who-we-are/videotbn-vision-and-mission.jpg" controls></video>
+                                    <!--<img style="cursor:pointer" src="../images/videotbn-vision-and-mission.jpg" alt="" class="videoCover" id="videotbn2" data-link="/special/2015/2015-jc130/cht20151223/special_2015-jc130_cht20151223">-->
                                 </div>
                             </div>
                         </div>
