--- a/html/Introduction_d.html
+++ b/html/Introduction_d.html
@@ -17,13 +17,13 @@
     <link type="text/css" rel="stylesheet" href="../css/footer.css" />
     <link type="text/css" rel="stylesheet" href="../css/Introduction.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
     <div class="headerTop clearfix">
-        <div class="headLogo"></div>
+        <div class="headLogo"> <a href="../index.html"></a></div>
         <div class="headRight"></div>
     </div>
     <div class="headerBottom">
@@ -46,17 +46,17 @@
         </li>
         <li>成為會員
             <ul class="subMenu">
-                <li class="subMenuItem"><a href="" class="nav-arrow" >簡介</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >會員卡簽賬權</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >會員優惠</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >Young Menbers</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >會員迎新</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >遵守事項</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >駕駛及泊車指南</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >設施指南</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >會籍狀態及表格章程</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >常見問題</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >電話指南</a></li>
+                <li class="subMenuItem"><a href="./member.html" class="nav-arrow" >簡介</a></li>
+                <li class="subMenuItem"><a href="./member_a.html" class="nav-arrow" >會員卡簽賬權</a></li>
+                <li class="subMenuItem"><a href="./member_b.html" class="nav-arrow" >會員優惠</a></li>
+                <li class="subMenuItem"><a href="./member_c.html" class="nav-arrow" >Young Menbers</a></li>
+                <li class="subMenuItem"><a href="./member_d.html" class="nav-arrow" >會員迎新</a></li>
+                <li class="subMenuItem"><a href="./member_e.html" class="nav-arrow" >遵守事項</a></li>
+                <li class="subMenuItem"><a href="./member_f.html" class="nav-arrow" >駕駛及泊車指南</a></li>
+                <li class="subMenuItem"><a href="./member_g.html" class="nav-arrow" >設施指南</a></li>
+                <li class="subMenuItem"><a href="./member_h.html" class="nav-arrow" >會籍狀態及表格章程</a></li>
+                <li class="subMenuItem"><a href="./member_i.html" class="nav-arrow" >常見問題</a></li>
+                <li class="subMenuItem"><a href="./member_j.html" class="nav-arrow" >電話指南</a></li>
             </ul>
         </li>
         <li>社區貢獻及慈善
@@ -90,21 +90,34 @@
         <div class="mobile-title-en">馬會知多少</div>
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1"><li class="nav-left-header">公司簡介</li><li><a id="vision-mission-and-values" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/vision-mission-and-values.aspx" target="" class="active">目標、使命與核心價值</a></li><li><a id="management-structure" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/management-structure.aspx" target="">行政架構</a><ul class="nav-level-2"><li><a id="board-of-stewards" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/board-of-stewards.aspx" target="">董事局</a></li><li><a id="board-of-management" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/board-of-management.aspx" target="">管理委員會</a></li><li><a id="ceo" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/ceo.aspx" target="">行政總裁</a></li><li><a id="ceo-blog" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/ceo-blog.aspx" target="">應家柏網誌</a></li></ul></li><li><a id="racing-and-racecourse-entertainment" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/racing-and-racecourse-entertainment.aspx" target="">賽馬及馬場娛樂</a><ul class="nav-level-2"><li><a id="world-class-races" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/world-class-races.aspx" target="">世界級賽事</a></li><li><a id="world-beating-horses" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/world-beating-horses.aspx" target="">香港賽駒揚威海外</a></li><li><a id="our-outstanding-team" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/our-outstanding-team.aspx" target="">星級團隊</a></li><li><a id="racecourse-entertainment" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/racecourse-entertainment.aspx" target="">馬場娛樂</a></li><li><a id="leadership-in-international-racing" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/leadership-in-international-racing.aspx" target="">國際馬壇領導地位</a></li><li><a id="operations-excellence" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/operations-excellence.aspx" target="">卓越營運</a></li><li><a id="training-the-next-generation" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/training-the-next-generation.aspx" target="">培育新一代</a></li><li><a id="uncompromising-integrity" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/uncompromising-integrity.aspx" target="">堅守誠信</a></li></ul></li><li><a id="membership-club" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/membership-club.aspx" target="">會員會所</a></li><li><a id="responsible-sports-wagering-and-mark-six-lottery" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/responsible-sports-wagering-and-mark-six-lottery.aspx" target="">有節制體育博彩及六合彩獎券</a><ul class="nav-level-2"><li><a id="responsible-gambling-policy" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/responsible-gambling-policy.aspx" target="">有節制博彩政策</a></li><li><a id="sports-wagering-and-mark-six-lottery-services" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/sports-wagering-and-mark-six-lottery-services.aspx" target="">有節制體育博彩及六合彩獎券服務</a></li></ul></li><li><a id="corp-charities" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/charities.aspx" target="">慈善事務</a></li><li><a id="hkjc-sports-and-community-development" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/hkjc-sports-and-community-development.aspx" target="">馬會體育及社區發展</a></li><li><a id="awards-and-achievements" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/awards-and-achievements.aspx" target="">獎項及榮譽</a></li></ul></div>
+                <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                    <ul class="nav-level-1">
+                        <li class="nav-left-header">公司簡介</li>
+                        <li><a id="vision-mission-and-values" href="./Introduction.html" target="">目標、使命與核心價值</a></li>
+                        <li><a id="management-structure" href="./Introduction_a.html" target="">行政架構</a>
+                        </li>
+                        <li><a id="racing-and-racecourse-entertainment" href="./Introduction_b.html" target="">賽馬及馬場娛樂</a>
+                        </li>
+                        <li><a id="membership-club" href="./Introduction_c.html" target="">會員會所</a></li>
+                        <li><a id="responsible-sports-wagering-and-mark-six-lottery" class="active" href="./Introduction_d.html" target="">有節制體育博彩及六合彩獎券</a>
+                        </li>
+                        <li><a id="corp-charities" href="./Introduction_e.html" target="">慈善事務</a></li>
+                        <li><a id="hkjc-sports-and-community-development" href="./Introduction_f.html" target="">馬會體育及社區發展</a></li>
+                        <li><a id="awards-and-achievements" href="./Introduction_g.html" target="">獎項及榮譽</a></li>
+                        <li><a id="open-result" href="./Introduction_h.html" target="">模擬賽馬開獎結果</a></li>
+                    </ul>
+                </div>
                 <!--CONTENT-->
                 <div class="col-md-10 col-sm-9">
                     <div class="corporate-header">
                         <h4>有節制體育博彩及六合彩獎券
-
                             <div id="fontSizeContainer">
                                 <div><span>字型</span> <a class="small" href="javascript:changeFontSizeRe(0);"></a><a class="medium active" href="javascript:changeFontSizeRe(1);"></a><a class="large" href="javascript:changeFontSizeRe(2);"></a></div>
                             </div>
                             <div class="clear"></div>
-
                         </h4>
                         <div class="dashLine"></div>
                     </div>
-
                     <div class="corporate-content-container">
                         <div class="row marginBottom-20px">
                             <div class="col-md-12">
@@ -115,22 +128,22 @@
                         </div>
                         <div class="row">
                             <div class="col-md-5 col-sm-6 col-xs-12">
-                                <a href="responsible-gambling-policy.aspx"><img src="../images/tbn-responsible-gambling.jpg" border="0"></a>
+                                <a href="#responsible-gambling-policy"><img src="../images/tbn-responsible-gambling.jpg" border="0"></a>
                             </div>
                             <div class="col-md-7 col-sm-6 col-xs-12">
                                 <div class="subsection-container">
-                                    <div class="subsection-list"><a href="responsible-gambling-policy.aspx">有節制博彩政策</a></div>
+                                    <div class="subsection-list"><a href="#responsible-gambling-policy">有節制博彩政策</a></div>
                                     <div>了解馬會獲國際認證的有節制博彩政策</div>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-5 col-sm-6 col-xs-12">
-                                <a href="sports-wagering-and-mark-six-lottery-services.aspx"><img src="../images/tbn-responsible-sports-wagering.jpg" border="0"></a>
+                                <a href="#sports-wagering-and-mark-six-lottery-services"><img src="../images/tbn-responsible-sports-wagering.jpg" border="0"></a>
                             </div>
                             <div class="col-md-7 col-sm-6 col-xs-12">
                                 <div class="subsection-container">
-                                    <div class="subsection-list"><a href="sports-wagering-and-mark-six-lottery-services.aspx">有節制體育博彩及六合彩獎券服務</a></div>
+                                    <div class="subsection-list"><a href="#sports-wagering-and-mark-six-lottery-services">有節制體育博彩及六合彩獎券服務</a></div>
                                     <div>了解馬會的有節制博彩服務</div>
                                 </div>
                             </div>
@@ -144,12 +157,12 @@
     <div class="shadowR"></div>
     <div class="clear"></div>
 </section>
-    <footer class="container">
+ <footer class="container">
         <div id="rgp-container">
             <div>
                 <div class="row no-gutter">
                     <div class="col-md-10 col-sm-10 col-xs-12 marginTop-20px">
-                        <a class="rgp-text" href="http://www.hkjc.com/responsible-gambling/ch/index.aspx" > <b>博彩要有節制</b></a>
+                        <a class="rgp-text" href="#" > <b>博彩要有節制</b></a>
                         <ul class="hidden-xs">
                             <li>未滿十八歲人士不得投注或進入可投注的地方。</li>
                             <li>向非法或海外莊家下注，最高可被判監九個月及罰款三萬元。</li>
@@ -180,4 +193,63 @@
     </footer>
 </div>
 </body>
+<script type="text/javascript" src="../js/vender/jquery.js"></script>
+<script>
+    $(function(){
+        window.addEventListener("hashchange", function(e){
+            switch(new URL(e.newURL).hash){
+                case '#responsible-gambling-policy':
+                    $('.corporate-content-container').html($('#responsible-gambling-policy').html());
+                    break;
+                case '#sports-wagering-and-mark-six-lottery-services':
+                    $('.corporate-content-container').html($('#sports-wagering-and-mark-six-lottery-services').html());
+                    break;
+                case '':
+                    window.location.href = './Introduction_d.html';
+            }
+        }, false);
+    });
+</script>
+<script type="template" id="responsible-gambling-policy">
+        <div class="row">
+            <div class="col-md-12">
+                <p>除了香港賽馬會慈善信託基金的工作外，馬會透過不同活動走進社區，例如在沙田馬場及彭福公園舉辦的年度大型社區盛事<a href="http://campaign.hkjc.com/ch/rht-festival/index.aspx" target="_blank">「同心同步同樂日」</a>，旨在教育及啟發香港市民，宣揚「我做得到」的正面精神。馬會將其商業知識及運動項目管理經驗，發揮在建設更美好香港之上，尤其著力於推動馬術運動和社區足球項目。 </p>
+                <p>為準備於香港舉行的北京2008年奧運及殘奧馬術比賽，馬會斥資12億港元興建比賽場地，並管理有關工程，以及於比賽當中提供一切支援運送服務，因而獲授「重要貢獻機構」的名銜。</p>
+                <p>馬會其後支持舉辦廣州2010年亞運會馬術項目，興建中的從化馬匹訓練中心，正是廣州亞運會馬術項目的遺產。承接有關發展，馬會亦正積極培育香港精英騎手，支持他們於歐洲受訓，多名馬會贊助的騎手更已於國際賽事取得佳績。 </p>
+                <p>馬會三間公眾騎術學校，每年吸引超過60,000人次參加其課程及活動，此外，馬會又向五星級香港馬術大師賽等比賽提供贊助及技術支援，喚起市民對馬術運動興趣。香港馬術大師賽的焦點項目是獨特的香港賽馬會騎師馬術接力賽，由香港頂級騎師夥拍精英馬術騎手，在馬術賽一較高下，詳情請見「馬會馬術發展」。 </p>
+                <p>馬會亦善用其商業知識，推廣足球運動，務求帶來個人及社區的正面改變。馬會與香港足球總會及非政府組織夥伴合作，倡導「賽馬會青少年足球發展計劃」，為香港年輕人提供專業足球、領導才能及人生技巧培訓，協助他們提升體能、心智及社交發展。不少計劃參加者深受啟發，已開始擔任社區足球教練，與其他年輕人分享所學，回饋社會。 </p>
+                <p>馬會透過「香港賽馬會青少年體育記者培訓計劃 」，提升青少年的語文及溝通能力。馬會亦與地區夥伴緊密合作，透過地區活動回應社區需要，由員工組成的馬會義工隊經常參與其中。 </p>
+            </div>
+        </div>
+
+        <div class="row" id="photo-area">
+            <div class="col-md-4 col-sm-4 col-xs-12">
+                <img src="../images/hkjc-sports-and-community-development-1.jpg" alt="">
+            </div>
+            <div class="col-md-4 col-sm-4 col-xs-12">
+                <img src="../images/hkjc-sports-and-community-development-2.jpg" alt="">
+            </div>
+            <div class="col-md-4 col-sm-4 col-xs-12">
+                <img src="../images/hkjc-sports-and-community-development-3.jpg" alt="">
+            </div>
+        </div>
+</script>
+<script type="template" id="sports-wagering-and-mark-six-lottery-services">
+        <div class="row marginBottom-20px">
+            <div class="col-md-12">
+                <h5>有節制體育博彩</h5>
+                <p class="paddingBottom-20px">馬會提供賽馬及足球博彩服務。大部分賽馬彩池為同中同分彩池，而足球彩池則為固定賠率彩池。馬會定期檢討及更新其博彩產品及系統，以滿足大眾的需求及博助打擊非法賭博。實際上，馬會走在科技開發及運用的尖端，馬會是全球首個運用先進賠率計算科技的賽馬機構，將本來用於高速證券交易的科技，用於其賽馬彩池投注產品。</p>
+                <h5>六合彩獎券</h5>
+                <p>六合彩是一項49選六的獎券遊戲，共有七組獎金。六合彩每星期攪珠三次，通常於星期二、星期四及星期六或星期日晚上舉行。</p>
+                <p class="paddingBottom-20px">本港六百多萬成年人口中，有近四百萬人曾購買六合彩。六合彩亦透過政府稅收及獎券基金，將所得收益直接回饋社會。馬會自1976年經營六合彩獎券活動以來，為獎券基金帶來220億港元撥款，支持超過二萬個項目。</p>
+                <h5>博彩渠道</h5>
+                <p>馬會提供多個博彩渠道，包括兩個馬場、102間場外投注處、電話投注、網上投注及流動投注服務。所有投注渠道均須遵守馬會的有節制博彩政策，奉行嚴謹的監控制度。</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <img src="../images/banner-channels-and-services.jpg" alt="">
+            </div>
+        </div>
+</script>
 </html>
