--- a/html/Introduction_e.html
+++ b/html/Introduction_e.html
@@ -17,13 +17,13 @@
     <link type="text/css" rel="stylesheet" href="../css/footer.css" />
     <link type="text/css" rel="stylesheet" href="../css/Introduction.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
     <div class="headerTop clearfix">
-        <div class="headLogo"></div>
+        <div class="headLogo"> <a href="../index.html"></a></div>
         <div class="headRight"></div>
     </div>
     <div class="headerBottom">
@@ -46,17 +46,17 @@
         </li>
         <li>成為會員
             <ul class="subMenu">
-                <li class="subMenuItem"><a href="" class="nav-arrow" >簡介</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >會員卡簽賬權</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >會員優惠</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >Young Menbers</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >會員迎新</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >遵守事項</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >駕駛及泊車指南</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >設施指南</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >會籍狀態及表格章程</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >常見問題</a></li>
-                <li class="subMenuItem"><a href="" class="nav-arrow" >電話指南</a></li>
+                <li class="subMenuItem"><a href="./member.html" class="nav-arrow" >簡介</a></li>
+                <li class="subMenuItem"><a href="./member_a.html" class="nav-arrow" >會員卡簽賬權</a></li>
+                <li class="subMenuItem"><a href="./member_b.html" class="nav-arrow" >會員優惠</a></li>
+                <li class="subMenuItem"><a href="./member_c.html" class="nav-arrow" >Young Menbers</a></li>
+                <li class="subMenuItem"><a href="./member_d.html" class="nav-arrow" >會員迎新</a></li>
+                <li class="subMenuItem"><a href="./member_e.html" class="nav-arrow" >遵守事項</a></li>
+                <li class="subMenuItem"><a href="./member_f.html" class="nav-arrow" >駕駛及泊車指南</a></li>
+                <li class="subMenuItem"><a href="./member_g.html" class="nav-arrow" >設施指南</a></li>
+                <li class="subMenuItem"><a href="./member_h.html" class="nav-arrow" >會籍狀態及表格章程</a></li>
+                <li class="subMenuItem"><a href="./member_i.html" class="nav-arrow" >常見問題</a></li>
+                <li class="subMenuItem"><a href="./member_j.html" class="nav-arrow" >電話指南</a></li>
             </ul>
         </li>
         <li>社區貢獻及慈善
@@ -90,7 +90,23 @@
         <div class="mobile-title-en">馬會知多少</div>
         <div class="row">
             <div class="col-md-12 col-sm-12">
-                <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1"><li class="nav-left-header">公司簡介</li><li><a id="vision-mission-and-values" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/vision-mission-and-values.aspx" target="" class="active">目標、使命與核心價值</a></li><li><a id="management-structure" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/management-structure.aspx" target="">行政架構</a><ul class="nav-level-2"><li><a id="board-of-stewards" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/board-of-stewards.aspx" target="">董事局</a></li><li><a id="board-of-management" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/board-of-management.aspx" target="">管理委員會</a></li><li><a id="ceo" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/ceo.aspx" target="">行政總裁</a></li><li><a id="ceo-blog" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/ceo-blog.aspx" target="">應家柏網誌</a></li></ul></li><li><a id="racing-and-racecourse-entertainment" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/racing-and-racecourse-entertainment.aspx" target="">賽馬及馬場娛樂</a><ul class="nav-level-2"><li><a id="world-class-races" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/world-class-races.aspx" target="">世界級賽事</a></li><li><a id="world-beating-horses" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/world-beating-horses.aspx" target="">香港賽駒揚威海外</a></li><li><a id="our-outstanding-team" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/our-outstanding-team.aspx" target="">星級團隊</a></li><li><a id="racecourse-entertainment" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/racecourse-entertainment.aspx" target="">馬場娛樂</a></li><li><a id="leadership-in-international-racing" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/leadership-in-international-racing.aspx" target="">國際馬壇領導地位</a></li><li><a id="operations-excellence" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/operations-excellence.aspx" target="">卓越營運</a></li><li><a id="training-the-next-generation" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/training-the-next-generation.aspx" target="">培育新一代</a></li><li><a id="uncompromising-integrity" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/uncompromising-integrity.aspx" target="">堅守誠信</a></li></ul></li><li><a id="membership-club" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/membership-club.aspx" target="">會員會所</a></li><li><a id="responsible-sports-wagering-and-mark-six-lottery" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/responsible-sports-wagering-and-mark-six-lottery.aspx" target="">有節制體育博彩及六合彩獎券</a><ul class="nav-level-2"><li><a id="responsible-gambling-policy" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/responsible-gambling-policy.aspx" target="">有節制博彩政策</a></li><li><a id="sports-wagering-and-mark-six-lottery-services" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/sports-wagering-and-mark-six-lottery-services.aspx" target="">有節制體育博彩及六合彩獎券服務</a></li></ul></li><li><a id="corp-charities" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/charities.aspx" target="">慈善事務</a></li><li><a id="hkjc-sports-and-community-development" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/hkjc-sports-and-community-development.aspx" target="">馬會體育及社區發展</a></li><li><a id="awards-and-achievements" href="http://corporate.hkjc.com/corporate/chinese/who-we-are/awards-and-achievements.aspx" target="">獎項及榮譽</a></li></ul></div>
+                <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                    <ul class="nav-level-1">
+                        <li class="nav-left-header">公司簡介</li>
+                        <li><a id="vision-mission-and-values" href="./Introduction.html" target="">目標、使命與核心價值</a></li>
+                        <li><a id="management-structure" href="./Introduction_a.html" target="">行政架構</a>
+                        </li>
+                        <li><a id="racing-and-racecourse-entertainment" href="./Introduction_b.html" target="">賽馬及馬場娛樂</a>
+                        </li>
+                        <li><a id="membership-club" href="./Introduction_c.html" target="">會員會所</a></li>
+                        <li><a id="responsible-sports-wagering-and-mark-six-lottery" href="./Introduction_d.html" target="">有節制體育博彩及六合彩獎券</a>
+                        </li>
+                        <li><a id="corp-charities" href="./Introduction_e.html" target="" class="active">慈善事務</a></li>
+                        <li><a id="hkjc-sports-and-community-development" href="./Introduction_f.html" target="">馬會體育及社區發展</a></li>
+                        <li><a id="awards-and-achievements" href="./Introduction_g.html" target="">獎項及榮譽</a></li>
+                        <li><a id="open-result" href="./Introduction_h.html" target="">模擬賽馬開獎結果</a></li>
+                    </ul>
+                </div>
                 <!--CONTENT-->
                 <div class="col-md-10 col-sm-9">
                     <div class="corporate-header">
