--- a/html/contribution.html
+++ b/html/contribution.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" class="active">青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -112,8 +126,8 @@
                         <div class="charities-content-container">
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
-                                    <p>青年人是社會未來的棟樑。多年來，馬會資助各類型青少年活動，亦主動開拓不同項目，向青年人灌輸正確的價值觀及處世態度。 其中，具前瞻性的<a href="/charities/chinese/charities-trust/trust-initiated-projects/paths.aspx">「共創成長路」- 賽馬會青少年培育計劃</a>，不僅獲納入本地課程，更經多個海外教育機構採用，贏得國際認可。由民政事務局舉辦、馬會資助的「青少年暑期活動」 (現改稱為「<a href="/charities/chinese/community-contributions/hkjc-130-story-youth-hab.aspx">「青少年暑期活動」</a>」)，自1969年推出以來，已陪伴數百萬名兒童及青少年度過充實而富意義的暑假。</p>
-                                    <p>馬會深信，培養新一代的創造力和可持續發展，是香港長遠發展的關鍵，馬會慈善信託基金致力促進青少年的身心發展，提供肥沃的發展土壤，激發其潛能，孕育他們積極參與社會事務的能力與熱誠。賽馬會「創不同」學院及「賽馬會鼓掌‧創你程計劃」等項目，以嶄新方式鼓勵青年人跳出框框，善用創新思維。其中，<a href="/charities/chinese/charities-trust/trust-initiated-projects/clap-for-youth-at-jc.aspx">「賽馬會鼓掌‧創你程計劃」</a>是全港首個結合跨界別力量，全面協助在學及非在學青少規劃前路的項目，旨在營造有利環境，提供多元出路，讓青少年探索及認清自己的興趣及抱負，踏出康莊大道。</p>
+                                    <p>青年人是社會未來的棟樑。多年來，馬會資助各類型青少年活動，亦主動開拓不同項目，向青年人灌輸正確的價值觀及處世態度。 其中，具前瞻性的「共創成長路」- 賽馬會青少年培育計劃，不僅獲納入本地課程，更經多個海外教育機構採用，贏得國際認可。由民政事務局舉辦、馬會資助的「青少年暑期活動」 (現改稱為「「青少年暑期活動」」)，自1969年推出以來，已陪伴數百萬名兒童及青少年度過充實而富意義的暑假。</p>
+                                    <p>馬會深信，培養新一代的創造力和可持續發展，是香港長遠發展的關鍵，馬會慈善信託基金致力促進青少年的身心發展，提供肥沃的發展土壤，激發其潛能，孕育他們積極參與社會事務的能力與熱誠。賽馬會「創不同」學院及「賽馬會鼓掌‧創你程計劃」等項目，以嶄新方式鼓勵青年人跳出框框，善用創新思維。其中，「賽馬會鼓掌‧創你程計劃」是全港首個結合跨界別力量，全面協助在學及非在學青少規劃前路的項目，旨在營造有利環境，提供多元出路，讓青少年探索及認清自己的興趣及抱負，踏出康莊大道。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <div class="row">
