--- a/html/contribution_a.html
+++ b/html/contribution_a.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="" class="active">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -112,8 +126,8 @@
                         <div class="charities-content-container">
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
-                                    <p>馬會早年已就本港人口老化趨勢，主導及捐助相關項目，以應對即時以至長期的挑戰。除成立香港及東南亞首個腦退化症患者綜合護理中心 ─ <a href="/charities/chinese/community-contributions/hkjc-130-story-elderly-jccpa.aspx">賽馬會耆智園</a>外，馬會更積極支持各類型服務，鼓勵長者活出豐盛晚年。當中，由馬會主導的<a href="/charities/chinese/charities-trust/trust-initiated-projects/cadenza.aspx" target="_self">「流金頌：賽馬會長者計劃新里程」</a>，為長者開創嶄新服務模式，提升生活質素。此外，馬會多年來亦就長者就業、社區支援、促進健康，以及跨代共融方面，支持不同項目。</p>
-                                    <p>為提升護老服務，協助香港建構為長者友善城市，馬會在2014年資助成立香港中文大學賽馬會老年學研究所，透過研究項目、公眾教育及知識分享活動，推廣積極晚年信息。馬會亦聯同四間老年學研究機構，推行<a href="/charities/chinese/community-contributions/hkjc-130-story-elderly-building.aspx">「賽馬會齡活城市」計劃</a>，評估地區現況，並與不同社區組織合作，建構一個跨齡友善的香港。</p>
+                                    <p>馬會早年已就本港人口老化趨勢，主導及捐助相關項目，以應對即時以至長期的挑戰。除成立香港及東南亞首個腦退化症患者綜合護理中心 ─ 賽馬會耆智園外，馬會更積極支持各類型服務，鼓勵長者活出豐盛晚年。當中，由馬會主導的「流金頌：賽馬會長者計劃新里程」，為長者開創嶄新服務模式，提升生活質素。此外，馬會多年來亦就長者就業、社區支援、促進健康，以及跨代共融方面，支持不同項目。</p>
+                                    <p>為提升護老服務，協助香港建構為長者友善城市，馬會在2014年資助成立香港中文大學賽馬會老年學研究所，透過研究項目、公眾教育及知識分享活動，推廣積極晚年信息。馬會亦聯同四間老年學研究機構，推行「賽馬會齡活城市」計劃，評估地區現況，並與不同社區組織合作，建構一個跨齡友善的香港。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <div class="row">
