--- a/html/contribution_b.html
+++ b/html/contribution_b.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="" class="active">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -112,9 +126,9 @@
                         <div class="charities-content-container">
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
-                                    <p>馬會一直以提升巿民的生活質素為己任。這承諾可追溯至上世紀五十年代，當時馬會資助銅鑼灣避風塘填海工程，造就了維多利亞公園的誕生，成為香港最受歡迎的綠色市肺之一。隨著本地經濟快速增長，市民對康樂活動的需求亦同步增加，馬會資助的康樂設施亦因此與日俱增，當中包括<a href="/charities/chinese/jc-community-facilities/penfold-park.aspx">彭福公園</a>、<a href="/charities/chinese/community-contributions/hkjc-130-story-sports-hkpark.aspx">香港公園</a>、<a href="/charities/chinese/community-contributions/hkjc-130-story-sports-klnpark.aspx">九龍公園</a>、香港大球場，以至廣受公眾愛戴的<a href="/charities/chinese/community-contributions/hkjc-130-story-sports-oceanpark.aspx">海洋公園</a>。</p>
-                                    <p>馬會對體育發展的投資亦孕育出<a href="/charities/chinese/community-contributions/hkjc-130-story-sports-hksi.aspx">香港體育學院</a>，自學院於1982年竣工啟用以來，培育了不少本地精英運動員，多年來，人材輩出、成績斐然，是港人的驕傲。馬會在香港協辦<a href="/charities/chinese/community-contributions/hkjc-130-story-sports-equestrian.aspx">北京2008年奧運馬術比賽</a>時，亦扮演了重要的角色，有助香港躍登世界運動舞台。每年於香港舉行的「浪琴表香港馬術大師賽」舉世矚目，協助推動馬術運動在港發展，亦進一步反映馬會對該運動的支持。</p>
-                                    <p>馬會透過慈善信託基金悉力支持不同體育項目，藉此推動正面價值及樂觀態度於香港社會扎根，延續馬會促進體育發展及推廣健康生活的悠久歷史。其中，不同背景的年輕足球員均可透過馬會足球發展計劃砥礪天賦，學習體育精神；當中的<a href="http://campaign.hkjc.com/ch/yfd/index.aspx" target="_blank">賽馬會青少年足球發展計劃</a>是全港首個以曼聯模式訓練本地青少年的項目，深受各界歡迎。</p>
+                                    <p>馬會一直以提升巿民的生活質素為己任。這承諾可追溯至上世紀五十年代，當時馬會資助銅鑼灣避風塘填海工程，造就了維多利亞公園的誕生，成為香港最受歡迎的綠色市肺之一。隨著本地經濟快速增長，市民對康樂活動的需求亦同步增加，馬會資助的康樂設施亦因此與日俱增，當中包括彭福公園、香港公園、九龍公園</a>、香港大球場，以至廣受公眾愛戴的海洋公園。</p>
+                                    <p>馬會對體育發展的投資亦孕育出香港體育學院，自學院於1982年竣工啟用以來，培育了不少本地精英運動員，多年來，人材輩出、成績斐然，是港人的驕傲。馬會在香港協辦北京2008年奧運馬術比賽時，亦扮演了重要的角色，有助香港躍登世界運動舞台。每年於香港舉行的「浪琴表香港馬術大師賽」舉世矚目，協助推動馬術運動在港發展，亦進一步反映馬會對該運動的支持。</p>
+                                    <p>馬會透過慈善信託基金悉力支持不同體育項目，藉此推動正面價值及樂觀態度於香港社會扎根，延續馬會促進體育發展及推廣健康生活的悠久歷史。其中，不同背景的年輕足球員均可透過馬會足球發展計劃砥礪天賦，學習體育精神；當中的賽馬會青少年足球發展計劃是全港首個以曼聯模式訓練本地青少年的項目，深受各界歡迎。</p>
                                     <p>此外，為迎合不同年齡人士的運動需要，馬會倡導以創新手法，為各年齡階層的市民，包括兒童、青少年、成年人以至長者設計多元活動，在體育運動中加入刺激趣味及激勵元素，提高公眾參與運動的興趣和動機，同時降低運動門檻，吸引他們踏出第一步，享受運動，並慢慢將其變成生活習慣，建立健康生活模式。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
