--- a/html/contribution_d.html
+++ b/html/contribution_d.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="" class="active">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -112,8 +126,8 @@
                         <div class="charities-content-container">
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
-                                    <p>人才培訓是馬會重點關注的範疇之一，旨在為持不同能力和志願的人士，創造盡展潛能的機會。創立於1960年的賽馬會實用中學，是馬會資助的第一所學校；當時大量內地移民湧入香港，令適齡學童人數急增，促使賽馬會實用中學應運而生。其後，馬會的捐款更惠及各級主流教育，以至職業培訓層面。由馬會資助其興建工程及其後多項發展的<a href="/charities/chinese/community-contributions/hkjc-130-story-edu-hkust.aspx" target="_self">香港科技大學</a>，現已躍升為全球最負盛名的高等學府之一。此外，透過香港理工大學<a href="/charities/chinese/community-contributions/hkjc-130-story-edu-jcit.aspx" target="_self">賽馬會創新樓</a>等項目，馬會亦為香港創意產業等領域的長遠發展，注入新動力。</p>
-                                    <p>馬會對本地教育「軟件」的貢獻同樣值得關注。在馬會慈善信託基金的鼎力支持下，來自低收入家庭的中小學生獲得深造及參與各種課外活動的平等機會，擴闊他們的視野。<a href="/charities/chinese/charities-trust/trust-initiated-projects/hong-kong-jockey-club-scholarships.aspx" target="_self">香港賽馬會獎學金</a>作為本港其中一個備受尊崇的獎學金項目，近年將資助範圍由本科生拓展至涵蓋研究生、有特殊教育需要的學生，以及正接受職業訓練的同學，進一步落實為青年人提供多元發展出路的使命。</p>
+                                    <p>人才培訓是馬會重點關注的範疇之一，旨在為持不同能力和志願的人士，創造盡展潛能的機會。創立於1960年的賽馬會實用中學，是馬會資助的第一所學校；當時大量內地移民湧入香港，令適齡學童人數急增，促使賽馬會實用中學應運而生。其後，馬會的捐款更惠及各級主流教育，以至職業培訓層面。由馬會資助其興建工程及其後多項發展的香港科技大學，現已躍升為全球最負盛名的高等學府之一。此外，透過香港理工大學賽馬會創新樓等項目，馬會亦為香港創意產業等領域的長遠發展，注入新動力。</p>
+                                    <p>馬會對本地教育「軟件」的貢獻同樣值得關注。在馬會慈善信託基金的鼎力支持下，來自低收入家庭的中小學生獲得深造及參與各種課外活動的平等機會，擴闊他們的視野。香港賽馬會獎學金作為本港其中一個備受尊崇的獎學金項目，近年將資助範圍由本科生拓展至涵蓋研究生、有特殊教育需要的學生，以及正接受職業訓練的同學，進一步落實為青年人提供多元發展出路的使命。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <div class="row">
