--- a/html/contribution_e.html
+++ b/html/contribution_e.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="" class="active">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -113,7 +127,7 @@
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
                                     <p>戰後香港百廢待興，加上大量內地移民湧入，導致生活環境窘迫、傳染病迅速傳播，促使馬會肩擔起社區保健的重要使命。由於公共衛生資源緊絀，馬會在上世紀五十年代作出多次關鍵性捐款，協助興建或擴建醫院、產科病房和治療中心，並營辦二十多間賽馬會診所及兩間流動診所。</p>
-                                    <p>歷年，馬會慈善信託基金持續與政府及本地機構合作，深入而廣泛地推動醫療服務進一步發展。馬會更主動倡議多個項目，以應對社會的長遠需求，包括於2003年沙士肆虐香港時，向政府建議籌辦<a href="/charities/chinese/community-contributions/hkjc-130-story-medical-chp.aspx" target="_self">衞生防護中心</a>，並捐助五億港元作為建設資金。及後，當香港面對禽流感及豬流感等公共衞生挑戰時，中心發揮了積極作用，有助政府更快速、更有效率應對。同樣由馬會資助的項目，包括協助公立醫院安裝病人吊運系統及電動病床的<a href="/charities/chinese/community-contributions/hkjc-130-story-people-ling.aspx">「賽馬會安寢輕移計劃」</a>，以至設於香港中文大學的<a href="/charities/chinese/community-contributions/hkjc-130-story-medical-teaching.aspx" target="_self">全港第三所教學醫院</a>等，均秉持馬會致力讓普羅市民以可負擔的費用，適時獲享優質醫療服務的承諾。</p>
+                                    <p>歷年，馬會慈善信託基金持續與政府及本地機構合作，深入而廣泛地推動醫療服務進一步發展。馬會更主動倡議多個項目，以應對社會的長遠需求，包括於2003年沙士肆虐香港時，向政府建議籌辦衞生防護中心，並捐助五億港元作為建設資金。及後，當香港面對禽流感及豬流感等公共衞生挑戰時，中心發揮了積極作用，有助政府更快速、更有效率應對。同樣由馬會資助的項目，包括協助公立醫院安裝病人吊運系統及電動病床的「賽馬會安寢輕移計劃」，以至設於香港中文大學的全港第三所教學醫院等，均秉持馬會致力讓普羅市民以可負擔的費用，適時獲享優質醫療服務的承諾。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <div class="row">
