--- a/html/contribution_f.html
+++ b/html/contribution_f.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="" class="active">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -112,8 +126,8 @@
                         <div class="charities-content-container">
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
-                                    <p>馬會重視傷健人士所需，透過全方位復康服務，協助他們迸發個人潛能。在教育方面，<a href="/charities/chinese/charities-trust/trust-initiated-projects/read-and-write.aspx" target="_self">「喜閱寫意：賽馬會讀寫支援計劃」</a>專門幫助有讀寫困難，尤其是讀寫障礙的兒童克服學習困難，惠及逾420,000名學前至中學程度的學生。</p>
-                                    <p>馬會亦大力促進復康服務軟硬件的發展，包括資助成立全港首間為癱瘓病人提供出院後過渡期護理的支援中心；以及支持在本地推行家居透析治療培訓課程，令香港晉身為亞洲首個為醫護人員提供相關技術培訓的城市。此外，馬會透過慈善信託基金資助大埔<a href="/charities/chinese/community-contributions/hkjc-130-story-rehabit-pinehill.aspx" target="_self">匡智松嶺村</a>的重建工作，使其成為全港最大規模的智障人士復康設施。由馬會主導的<a href="/charities/chinese/charities-trust/trust-initiated-projects/jc-a-connect.aspx" target="_self">「賽馬會喜伴同行計劃」</a>，是全港首個專為自閉症學童及其家長而設的計劃，從個人、學校及社區層面提供全方位支援。</p>
+                                    <p>馬會重視傷健人士所需，透過全方位復康服務，協助他們迸發個人潛能。在教育方面，「喜閱寫意：賽馬會讀寫支援計劃」專門幫助有讀寫困難，尤其是讀寫障礙的兒童克服學習困難，惠及逾420,000名學前至中學程度的學生。</p>
+                                    <p>馬會亦大力促進復康服務軟硬件的發展，包括資助成立全港首間為癱瘓病人提供出院後過渡期護理的支援中心；以及支持在本地推行家居透析治療培訓課程，令香港晉身為亞洲首個為醫護人員提供相關技術培訓的城市。此外，馬會透過慈善信託基金資助大埔匡智松嶺村的重建工作，使其成為全港最大規模的智障人士復康設施。由馬會主導的「賽馬會喜伴同行計劃」，是全港首個專為自閉症學童及其家長而設的計劃，從個人、學校及社區層面提供全方位支援。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <div class="row">
