--- a/html/contribution_h.html
+++ b/html/contribution_h.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -76,11 +76,11 @@
             </li>
             <li>馬會知多少
                 <ul class="subMenu">
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >重要里程</a></li>
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >香港賽馬博物館</a></li>
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >130週年活動回顧</a></li>
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >年報</a></li>
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >環境可持續發展</a></li>
+                    <li class="subMenuItem"><a href="./history.html" class="nav-arrow" >重要里程</a></li>
+                    <li class="subMenuItem"><a href="./history_a.html" class="nav-arrow" >香港賽馬博物館</a></li>
+                    <li class="subMenuItem"><a href="./history_b.html" class="nav-arrow" >130週年活動回顧</a></li>
+                    <li class="subMenuItem"><a href="./history_c.html" class="nav-arrow" >年報</a></li>
+                    <li class="subMenuItem"><a href="./history_d.html" class="nav-arrow" >環境可持續發展</a></li>
                 </ul>
             </li>
         </ul>
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="" class="active">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -112,9 +126,9 @@
                         <div class="charities-content-container">
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
-                                    <p>這些年來，馬會的環保工作無論在涵蓋幅度以至規模均取得長足進展。從設立香港首個「空氣污染指數」、推出<a href="/charities/chinese/community-contributions/hkjc-130-story-env-glass.aspx" target="_self">大型自願性回收玻璃樽計劃</a>以製作環保磚，以至於近年捐款支持香港中文大學設立本地首間氣候變化博物館，以及各種推動廢料「升級再造」的項目等，馬會多年來支持的項目可謂不勝枚舉，應對不同的環保議題。</p>
-                                    <p>為香港締建一個可持續發展的未來同樣是馬會文化與業務的核心價值。<a href="/charities/chinese/jc-community-facilities/kau-sai-chau-golf-course.aspx" target="_self">賽馬會滘西洲公眾高爾夫球場</a> 採用的多項創新舉措，屢獲國際殊榮，更因此晉身為中國首個獲「認可環保高爾夫球場資格」(Certified Audubon Cooperative Sanctuary)的高爾夫球場。 </p>
-                                    <p>馬會早在政府於2009年頒佈塑膠購物袋環保徵費前，已率先於2001年推出「香港賽馬會綠孩兒計劃」，鼓勵小學生減少使用塑膠袋。此外，馬會慈善信託基金正大力支持兩項公眾教育項目，包括為期五年的社區參與計劃<a href="/charities/chinese/community-contributions/hkjc-130-story-env-gaia.aspx" target="_self">「香港中文大學賽馬會地球保源行動」</a>，及「樂耕園 ─ 賽馬會長者綠色生活項目」，將綠色生活推廣至不同年齡階層。</p>
+                                    <p>這些年來，馬會的環保工作無論在涵蓋幅度以至規模均取得長足進展。從設立香港首個「空氣污染指數」、推出大型自願性回收玻璃樽計劃以製作環保磚，以至於近年捐款支持香港中文大學設立本地首間氣候變化博物館，以及各種推動廢料「升級再造」的項目等，馬會多年來支持的項目可謂不勝枚舉，應對不同的環保議題。</p>
+                                    <p>為香港締建一個可持續發展的未來同樣是馬會文化與業務的核心價值。賽馬會滘西洲公眾高爾夫球場 採用的多項創新舉措，屢獲國際殊榮，更因此晉身為中國首個獲「認可環保高爾夫球場資格」(Certified Audubon Cooperative Sanctuary)的高爾夫球場。 </p>
+                                    <p>馬會早在政府於2009年頒佈塑膠購物袋環保徵費前，已率先於2001年推出「香港賽馬會綠孩兒計劃」，鼓勵小學生減少使用塑膠袋。此外，馬會慈善信託基金正大力支持兩項公眾教育項目，包括為期五年的社區參與計劃「香港中文大學賽馬會地球保源行動」，及「樂耕園 ─ 賽馬會長者綠色生活項目」，將綠色生活推廣至不同年齡階層。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <div class="row">
