--- a/html/contribution_i.html
+++ b/html/contribution_i.html
@@ -18,13 +18,15 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a>
+
+            </div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -76,11 +78,11 @@
             </li>
             <li>馬會知多少
                 <ul class="subMenu">
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >重要里程</a></li>
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >香港賽馬博物館</a></li>
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >130週年活動回顧</a></li>
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >年報</a></li>
-                    <li class="subMenuItem"><a href="" class="nav-arrow" >環境可持續發展</a></li>
+                    <li class="subMenuItem"><a href="./history.html" class="nav-arrow" >重要里程</a></li>
+                    <li class="subMenuItem"><a href="./history_a.html" class="nav-arrow" >香港賽馬博物館</a></li>
+                    <li class="subMenuItem"><a href="./history_b.html" class="nav-arrow" >130週年活動回顧</a></li>
+                    <li class="subMenuItem"><a href="./history_c.html" class="nav-arrow" >年報</a></li>
+                    <li class="subMenuItem"><a href="./history_d.html" class="nav-arrow" >環境可持續發展</a></li>
                 </ul>
             </li>
         </ul>
@@ -91,28 +93,38 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="" class="active">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
-
                         <div class="row">
                             <div class="col-md-12">
                                 <h4>扶貧救急
-
                                     <div id="fontSizeContainer">
                                         <div><span>字型</span> <a class="small" href="javascript:changeFontSizeRe(0);"></a><a class="medium active" href="javascript:changeFontSizeRe(1);"></a><a class="large" href="javascript:changeFontSizeRe(2);"></a></div>
                                     </div>
                                     <div class="clear"></div>
-
                                 </h4>
                                 <div class="dashLine"></div>
                             </div>
                         </div>
-
                         <div class="charities-content-container">
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
-                                    <p>作為全港最大的慈善公益資助機構，馬會時刻準備應對突如其來的變故，在危難中伸出援手。<a href="/charities/chinese/community-contributions/hkjc-130-story-poverty-emergencyfund.aspx" target="_self">「賽馬會緊急援助基金」</a>為不幸事故的受害者及家屬提供即時援助，其中包括受土瓜灣樓宇倒塌事件影響的家庭，以及南丫島海難的受災人士。2008年，一場無情地震肆虐四川後，馬會破天荒撥備十億港元，支持及參與<a href="/charities/chinese/community-contributions/hkjc-130-story-poverty-sichuan.aspx" target="_self">災後重建工作</a>，包括成立全國首個災後重建與管理學院，協助國家應對未來災害。</p>
+                                    <p>作為全港最大的慈善公益資助機構，馬會時刻準備應對突如其來的變故，在危難中伸出援手。「賽馬會緊急援助基金」為不幸事故的受害者及家屬提供即時援助，其中包括受土瓜灣樓宇倒塌事件影響的家庭，以及南丫島海難的受災人士。2008年，一場無情地震肆虐四川後，馬會破天荒撥備十億港元，支持及參與災後重建工作，包括成立全國首個災後重建與管理學院，協助國家應對未來災害。</p>
                                     <p>馬會時刻關注香港的扶貧問題。在糧食價格急升的情況下，馬會致力回應貧困人士的需要，與多個非政府機構合作開設食物銀行，並向有需要人士提供營養膳食。</p>
                                     <p>為免低收入家庭的學童因貧窮而喪失優質學習機會，馬會撥款支持「陳校長免費補習天地」於大角咀設立分社，讓基層家庭兒童得享平等學習機會，協助他們提升技能、增強自信和擴闊視野，同時激發他們的學習興趣。新成立的分社提供一對一免費才藝培訓、親子學前訓練和遊戲小組，更設有電腦室方便在線學習。分社亦會舉辦離島訓練營，為基層學生帶來前所未有的學習體驗。</p>
                                 </div>
@@ -124,7 +136,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="row" id="photo-area">
                                 <div class="col-md-4 col-sm-4 col-xs-12">
                                     <img src="../images/emergency-and-poverty-relief-1.jpg" alt="">
