--- a/html/history.html
+++ b/html/history.html
@@ -19,13 +19,13 @@
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
     <link type="text/css" rel="stylesheet" href="../css/history.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
