--- a/html/history_b.html
+++ b/html/history_b.html
@@ -19,13 +19,13 @@
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
     <link type="text/css" rel="stylesheet" href="../css/history.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -125,7 +125,7 @@
                             <div class="row marginBottom-15px">
                                 <div class="col-md-8 col-md-offset-2 col-sm-12 col-sm-offset-0">
                                     <div class="videoBox">
-                                            <video id="vidplayer0_html5_api" class="vjs-tech" src="http://streaming.hkjc.edgesuite.net/hdflash//special/2015/2015-jc130/final20150717/special_2015-jc130_final20150717_1200kbps.mp4" poster="http://corporate.hkjc.com/corporate/common/images/history-and-reports/130-anniversary-events-gallery/videotbn-highlight.jpg"></video>
+                                            <video id="vidplayer0_html5_api" class="vjs-tech" src="http://streaming.hkjc.edgesuite.net/hdflash//special/2015/2015-jc130/final20150717/special_2015-jc130_final20150717_1200kbps.mp4" poster="http://corporate.hkjc.com/corporate/common/images/history-and-reports/130-anniversary-events-gallery/videotbn-highlight.jpg" controls></video>
                                     </div>
                                 </div>
                             </div>
@@ -137,6 +137,7 @@
         </div>
         <div class="shadowR"></div>
         <div class="clear"></div>
+    </section>
     <footer class="container">
         <div id="rgp-container">
             <div>
