--- a/html/member_b.html
+++ b/html/member_b.html
@@ -17,13 +17,13 @@
     <link type="text/css" rel="stylesheet" href="../css/Introduction.css" />
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -51,9 +51,9 @@
                     <li class="subMenuItem"><a href="./member_b.html" class="nav-arrow" >會員優惠</a></li>
                     <li class="subMenuItem"><a href="./member_c.html" class="nav-arrow" >Young Menbers</a></li>
                     <li class="subMenuItem"><a href="./member_d.html" class="nav-arrow" >會員迎新</a></li>
-                    <li class="subMenuItem"><a href="./member_e.html" class="nav-arrow" >遵守事項</a></li>
+                    <!--<li class="subMenuItem"><a href="./member_e.html" class="nav-arrow" >遵守事項</a></li>
                     <li class="subMenuItem"><a href="./member_f.html" class="nav-arrow" >駕駛及泊車指南</a></li>
-                    <li class="subMenuItem"><a href="./member_g.html" class="nav-arrow" >設施指南</a></li>
+                    <li class="subMenuItem"><a href="./member_g.html" class="nav-arrow" >設施指南</a></li>-->
                     <li class="subMenuItem"><a href="./member_h.html" class="nav-arrow" >會籍狀態及表格章程</a></li>
                     <li class="subMenuItem"><a href="./member_i.html" class="nav-arrow" >常見問題</a></li>
                     <li class="subMenuItem"><a href="./member_j.html" class="nav-arrow" >電話指南</a></li>
@@ -90,26 +90,49 @@
             <div class="mobile-title-zh">馬會會員</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1"><li class="nav-left-header">關於會籍</li><li><a id="introduction" href="http://member.hkjc.com/member/chinese/about-membership/introduction.aspx" target="" class="active">簡介</a></li><li><a id="about-membership-news-and-announcements" href="http://member.hkjc.com/member/chinese/about-membership/news-and-announcements/index.aspx" target="">最新資訊</a></li><li><a id="membership-cards-and-signing-rights" href="http://member.hkjc.com/member/chinese/about-membership/membership-cards-and-signing-rights/signing-rights-for-immediate-family.aspx" target="">會員卡簽賬權</a><ul class="nav-level-2"><li><a id="signing-rights-for-immediate-family" href="http://member.hkjc.com/member/chinese/about-membership/membership-cards-and-signing-rights/signing-rights-for-immediate-family.aspx" target="">直系親屬的簽賬權</a></li><li><a id="beas-river-debit-card" href="http://member.hkjc.com/member/chinese/about-membership/membership-cards-and-signing-rights/beas-river-debit-card.aspx" target="">雙魚河Debit Card</a></li></ul></li><li><a id="members-benefits" href="http://member.hkjc.com/member/chinese/about-membership/members-benefits/index.aspx" target="">會員優惠</a><ul class="nav-level-2"><li><a id="jc-dollars-programme" href="http://member.hkjc.com/member/chinese/about-membership/members-benefits/jc-dollars-programme.aspx" target="">盡享JC Dollars全年獎賞</a></li><li><a id="earn-and-redeem-hang-seng-credit-card-cash-dollars" href="http://member.hkjc.com/member/chinese/about-membership/members-benefits/earn-and-redeem-hang-seng-credit-card-cash-dollars.aspx" target="">賺取及享用恒生信用卡Cash Dollars </a></li></ul></li><li><a id="young-members" href="http://member.hkjc.com/member/chinese/about-membership/young-members/index.aspx" target="">Young Members</a><ul class="nav-level-2"><li><a id="exclusive-venues" href="http://member.hkjc.com/member/chinese/about-membership/young-members/exclusive-venues.aspx" target="">專用廂房</a></li><li><a id="young-members-events" href="http://member.hkjc.com/member/chinese/about-membership/young-members/events-index.aspx" target="">尊尚活動</a></li></ul></li><li><a id="new-members" href="http://member.hkjc.com/member/chinese/about-membership/new-members/index.aspx" target="">會員迎新</a><ul class="nav-level-2"><li><a id="quick-guide" href="http://member.hkjc.com/member/chinese/about-membership/new-members/quick-guide.aspx" target="">迎新指南</a></li><li><a id="new-members-events" href="http://member.hkjc.com/member/chinese/about-membership/new-members/events-index.aspx" target="">活動</a></li></ul></li><li><a id="points-to-observe" href="http://member.hkjc.com/member/chinese/about-membership/points-to-observe/using-clubhouse-facilities.aspx" target="">遵守事項</a><ul class="nav-level-2"><li><a id="using-clubhouse-facilities" href="http://member.hkjc.com/member/chinese/about-membership/points-to-observe/using-clubhouse-facilities.aspx" target="">使用會所設施</a></li><li><a id="using-racecourse-facilities" href="http://member.hkjc.com/member/chinese/about-membership/points-to-observe/using-racecourse-facilities.aspx" target="">使用馬場設施 (賽馬日)</a></li><li><a id="dress-code" href="http://member.hkjc.com/member/chinese/about-membership/points-to-observe/dress-code.aspx" target="">基本衣著準則</a></li></ul></li><li><a id="driving-and-parking" href="http://member.hkjc.com/member/chinese/about-membership/driving-and-parking/index.aspx" target="">駕駛及泊車指南</a><ul class="nav-level-2"><li><a id="driving-and-parking-happy-valley-racecourse" href="http://member.hkjc.com/member/chinese/about-membership/driving-and-parking/happy-valley-racecourse.aspx" target="">跑馬地馬場</a></li><li><a id="driving-and-parking-sha-tin-racecourse" href="http://member.hkjc.com/member/chinese/about-membership/driving-and-parking/sha-tin-racecourse.aspx" target="">沙田馬場</a></li><li><a id="driving-and-parking-happy-valley-clubhouse" href="http://member.hkjc.com/member/chinese/about-membership/driving-and-parking/happy-valley-clubhouse.aspx" target="">跑馬地會所</a></li><li><a id="driving-and-parking-sha-tin-clubhouse" href="http://member.hkjc.com/member/chinese/about-membership/driving-and-parking/sha-tin-clubhouse.aspx" target="">沙田會所</a></li><li><a id="driving-and-parking-beas-river-country-club" href="http://member.hkjc.com/member/chinese/about-membership/driving-and-parking/beas-river-country-club.aspx" target="">雙魚河鄉村會所</a></li></ul></li><li><a id="online-members-facilities-directory" href="http://member.hkjc.com/FacilitiesDirectory/index.html" target="_blank">設施指南</a></li><li><a id="forms" href="http://member.hkjc.com/member/chinese/about-membership/forms.aspx" target="">會籍狀態及表格章程</a></li><li><a id="m-faq" href="http://common.hkjc.com/utility/faq/chinese/membership/membership.aspx" target="_blank">常見問題</a></li><li><a id="telephone-directory" href="http://member.hkjc.com/member/chinese/about-membership/telephone-directory.aspx" target="">電話指南</a></li></ul><div id="contactUsBox" class="contact-us-field-y"><ul><li><a href="http://special.hkjc.com/infomenu/ch/contact/feedback.asp?t=m_Membership" class="contact-link" target="_blank">聯絡我們</a></li></ul></div></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1">
+                            <li class="nav-left-header">關於會籍</li>
+                            <li><a id="introduction" href="./member.html" target="">簡介</a></li>
+                            <li><a id="membership-cards-and-signing-rights" href="./member_a.html" target="" >會員卡簽賬權</a>
+                            </li>
+                            <li><a id="members-benefits" href="./member_b.html" target="" class="active">會員優惠</a>
+                            </li>
+                            <li><a id="young-members" href="./member_c.html" target="">Young Members</a>
+                            </li>
+                            <li><a id="new-members" href="./member_d.html" target="">會員迎新</a>
+                            </li>
+                           <!-- <li><a id="points-to-observe" href="./member_e.html" target="">遵守事項</a>
+                            </li>
+                            <li><a id="driving-and-parking" href="./member_f.html" target="">駕駛及泊車指南</a>
+                            </li>
+                            <li><a id="online-members-facilities-directory" href="./member_g.html" target="_blank">設施指南</a></li>-->
+                            <li><a id="forms" href="./member_h.html" target="">會籍狀態及表格章程</a></li>
+                            <li><a id="m-question" href="./member_i.html" target="">常見問題</a></li>
+                            <li><a id="m-faq" href="./member_j.html" target="">電話指南</a></li>
+                        </ul>
+                        <div id="contactUsBox" class="contact-us-field-y">
+                            <ul>
+                                <li><a href="" class="contact-link" target="_blank">聯絡我們</a></li>
+                            </ul>
+                        </div>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9">
-
                         <div class="member-header">
                             <h4>會員優惠
-
                             </h4>
                             <div class="dashLine"></div>
                         </div>
-
                         <div class="member-content-container">
                             <div class="row no-gutter" id="member-benefits-body">
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <a href="/member/chinese/about-membership/members-benefits/jc-dollars-programme.aspx">
+                                    <a href="#">
                                         <img src="../images/enjoy-jc-dollars-year-round-privileges.jpg" alt="盡享JC Dollars全年獎賞" title="盡享JC Dollars全年獎賞">
                                     </a>
                                 </div>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <a href="/member/chinese/about-membership/members-benefits/earn-and-redeem-hang-seng-credit-card-cash-dollars.aspx">
+                                    <a href="#">
                                         <img src="../images/earn-and-redeem-hang-seng-credit-card-cash-dollars.jpg" alt="賺取及享用恒生信用卡Cash Dollars " title="賺取及享用恒生信用卡Cash Dollars ">
                                     </a>
                                 </div>
@@ -159,4 +182,6 @@
     </footer>
 </div>
 </body>
+<script type="text/javascript" src="../js/vender/jquery.js"></script>
+<script type="text/javascript" src="../js/common.js"></script>
 </html>
