--- a/html/contribution_c.html
+++ b/html/contribution_c.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="" class="active">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -112,9 +126,9 @@
                         <div class="charities-content-container">
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
-                                    <p>推廣藝術、文化及保育古蹟是改善香港市民生活質素的重要一環。透過馬會對藝術及文化活動的鼎力支持，如資助<a href="/charities/chinese/community-contributions/hkjc-130-story-art-artsfestival.aspx" target="_self">香港藝術節</a>、法國五月藝術節，以及與康樂及文化事務署共同籌劃的<a href="/charities/chinese/community-contributions/hkjc-130-story-art-hkjcs.aspx" target="_self">「香港賽馬會呈獻系列」大型展覽</a>，港人得以欣賞更多世界級項目。一系列相關的外展及藝術教育活動，亦鼓勵更多市民參與其中，並引發青年觀眾對藝術文化的興趣。</p>
-                                    <p>同樣不容忽視的，是在馬會的支持下，本土藝術家獲得了寶貴機會，向世界展示才華，這正好貫徹馬會捐助興建<a href="/charities/chinese/community-contributions/hkjc-130-story-art-apa.aspx" target="_self">香港演藝學院</a>，成為全港唯一專門培育藝術人才的高等院校，以推動香港文化藝術事業發展的目標。</p>
-                                    <p>馬會重視香港文化及古蹟保育，包括支持被列入國家非物質文化遺產名錄的<a href="/charities/chinese/community-contributions/hkjc-130-story-art-ichc.aspx" target="_self">三項本地傳統活動 ─ 大坑火龍盛會、長洲太平清醮及大澳傳統遊涌</a>。此外，透過資助石硤尾一棟七十年代典型工廠大廈活化為賽馬會創意藝術中心，以及將<a href="/charities/chinese/charities-trust/trust-initiated-projects/central-police-station-revitalisation-project.aspx" target="_self">中區警署建築群</a>（現稱「大館」）活化成一處薈萃文物、當代藝術和公眾休憩設施的文化空間，馬會成功開創既能推動創意產業發展，同時保留港人集體回憶的雙贏局面。</p>
+                                    <p>推廣藝術、文化及保育古蹟是改善香港市民生活質素的重要一環。透過馬會對藝術及文化活動的鼎力支持，如資助香港藝術節、法國五月藝術節，以及與康樂及文化事務署共同籌劃的「香港賽馬會呈獻系列」大型展覽，港人得以欣賞更多世界級項目。一系列相關的外展及藝術教育活動，亦鼓勵更多市民參與其中，並引發青年觀眾對藝術文化的興趣。</p>
+                                    <p>同樣不容忽視的，是在馬會的支持下，本土藝術家獲得了寶貴機會，向世界展示才華，這正好貫徹馬會捐助興建香港演藝學院，成為全港唯一專門培育藝術人才的高等院校，以推動香港文化藝術事業發展的目標。</p>
+                                    <p>馬會重視香港文化及古蹟保育，包括支持被列入國家非物質文化遺產名錄的三項本地傳統活動 ─ 大坑火龍盛會、長洲太平清醮及大澳傳統遊涌。此外，透過資助石硤尾一棟七十年代典型工廠大廈活化為賽馬會創意藝術中心，以及將中區警署建築群（現稱「大館」）活化成一處薈萃文物、當代藝術和公眾休憩設施的文化空間，馬會成功開創既能推動創意產業發展，同時保留港人集體回憶的雙贏局面。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <div class="row">
