--- a/html/contribution_g.html
+++ b/html/contribution_g.html
@@ -18,13 +18,13 @@
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
     <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
-    <title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
     <header class="container">
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"> <a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -91,7 +91,21 @@
             <div class="mobile-title-zh">社區貢獻及慈善</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12"><ul class="nav-level-1" style="display: block;"><li class="nav-left-header">十大社區貢獻範疇</li><li><a id="youth-development" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/youth-development.aspx&#10;    &#10;  " target="" class="active">青年發展</a></li><li><a id="elderly-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/elderly-services.aspx&#10;    &#10;  " target="">長者服務</a></li><li><a id="sports-and-recreation" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/sports-and-recreation.aspx&#10;    &#10;  " target="">體育康樂</a></li><li><a id="arts-culture-and-heritage" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/arts-culture-and-heritage.aspx&#10;    &#10;  " target="">藝術文化</a></li><li><a id="education-and-training" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/education-and-training.aspx&#10;    &#10;  " target="">教育培訓</a></li><li><a id="medical-health" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/medical-health.aspx&#10;    &#10;  " target="">醫療衞生</a></li><li><a id="rehabilitation-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/rehabilitation-services.aspx&#10;    &#10;  " target="">復康服務</a></li><li><a id="family-services" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/family-services.aspx&#10;    &#10;  " target="">家庭服務</a></li><li><a id="environmental-protection" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/environmental-protection.aspx&#10;    &#10;  " target="">環境保護</a></li><li><a id="emergency-and-poverty-relief" href="&#10;    http://charities.hkjc.com/charities/chinese/community-contributions/emergency-and-poverty-relief.aspx&#10;    &#10;  " target="">扶貧救急</a></li></ul></div>
+                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
+                        <ul class="nav-level-1" style="display: block;">
+                            <li class="nav-left-header">十大社區貢獻範疇</li>
+                            <li><a id="youth-development" href="./contribution.html" target="" >青年發展</a></li>
+                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
+                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
+                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
+                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
+                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
+                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
+                            <li><a id="health-services" href="./contribution_g.html" target="" class="active">康復服務</a></li>
+                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
+                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
+                        </ul>
+                    </div>
                     <!--CONTENT-->
                     <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
 
@@ -113,7 +127,7 @@
                             <div class="row">
                                 <div class="col-md-10 col-sm-9">
                                     <p>家庭是社會的一大支柱。馬會歷年支持不同的活動及服務，促進家庭和諧幸福。除了向日益增加的跨境學生及跨境家庭提供支援外，馬會亦關注虐待兒童及長者自殺等議題。</p>
-                                    <p>為進一步建設更和諧的社會，馬會主導推出<a href="/charities/chinese/charities-trust/trust-initiated-projects/family.aspx" target="_self">「愛 + 人：賽馬會和諧社會計劃」</a>，旨在找出家庭問題的根源，制定預防方案，並舉辦多元化的公眾教育活動，宣揚健康、快樂、和諧家庭的訊息。項目於2007年推出以來，透過音樂劇及「快樂家庭廚房」等嶄新的公眾教育項目，讓全港18區共超過240,000人受惠。</p>
+                                    <p>為進一步建設更和諧的社會，馬會主導推出「愛 + 人：賽馬會和諧社會計劃」，旨在找出家庭問題的根源，制定預防方案，並舉辦多元化的公眾教育活動，宣揚健康、快樂、和諧家庭的訊息。項目於2007年推出以來，透過音樂劇及「快樂家庭廚房」等嶄新的公眾教育項目，讓全港18區共超過240,000人受惠。</p>
                                 </div>
                                 <div class="col-md-2 col-sm-3">
                                     <div class="row">
