--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="wrapper container">
     <header>
         <div class="headerTop clearfix">
-            <div class="headLogo"></div>
+            <div class="headLogo"><a href="../index.html"></a></div>
             <div class="headRight"></div>
         </div>
         <div class="headerBottom">
@@ -55,12 +55,12 @@
                     <li class="subMenuItem"><a href="./html/member_b.html" class="nav-arrow" target="_blank">會員優惠</a></li>
                     <li class="subMenuItem"><a href="./html/member_c.html" class="nav-arrow" target="_blank">Young Menbers</a></li>
                     <li class="subMenuItem"><a href="./html/member_d.html" class="nav-arrow" target="_blank">會員迎新</a></li>
-                    <li class="subMenuItem"><a href="./html/member_e.html" class="nav-arrow" target="_blank">遵守事項</a></li>
+                   <!-- <li class="subMenuItem"><a href="./html/member_e.html" class="nav-arrow" target="_blank">遵守事項</a></li>
                     <li class="subMenuItem"><a href="./html/member_f.html" class="nav-arrow" target="_blank">駕駛及泊車指南</a></li>
-                    <li class="subMenuItem"><a href="./html/member_g.html" class="nav-arrow" target="_blank">設施指南</a></li>
+                    <li class="subMenuItem"><a href="./html/member_g.html" class="nav-arrow" target="_blank">設施指南</a></li>-->
                     <li class="subMenuItem"><a href="./html/member_h.html" class="nav-arrow" target="_blank">會籍狀態及表格章程</a></li>
                     <li class="subMenuItem"><a href="./html/member_i.html" class="nav-arrow" target="_blank">常見問題</a></li>
-                    <li class="subMenuItem"><a href="./html/member_j .html" class="nav-arrow" target="_blank">電話指南</a></li>
+                    <li class="subMenuItem"><a href="./html/member_j.html" class="nav-arrow" target="_blank">電話指南</a></li>
                 </ul>
             </li>
             <li>
